<resources>
    <string name="app_name">My Application</string>
    <string name="message">Your order has been finsihed now</string>
    <string name="address">Address</string>
    <string name="finish">finish</string>
    <string name="contact_number">Contact Number</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="order_status">Order Status</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="order_detail">Order Details"</string>
</resources>